--- a/PowerPoint/Properties/Resources.resx
+++ b/PowerPoint/Properties/Resources.resx
@@ -118,16 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="b8fa8f291632f8fe68842e4fb100d8e0-square-rectangle-shape" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\b8fa8f291632f8fe68842e4fb100d8e0-square-rectangle-shape.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="下載" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\下載.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="096b9f21d164aa34a980c85b8a5994b4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\096b9f21d164aa34a980c85b8a5994b4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="png-clipart-circle-point-white-angle-line-art-circle-angle-white" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\png-clipart-circle-point-white-angle-line-art-circle-angle-white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="096b9f21d164aa34a980c85b8a5994b4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\096b9f21d164aa34a980c85b8a5994b4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="下載" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\下載.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="b8fa8f291632f8fe68842e4fb100d8e0-square-rectangle-shape" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\b8fa8f291632f8fe68842e4fb100d8e0-square-rectangle-shape.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cursor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cursor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
